fix #12819: wrong line break when entering long lines fix #12828: Inconsistent formatting of comment box and unnecessary scrollbars fix #12831: Corrected the "add", "edit" and "reply" functionality according to user's log-in status fix #12845: changed "reply" DIV to SPAN fixed: "Property:Has comment text" was missing in XML dump use of SMW's requireHeadItem function to add Javascript removed dependency to SemanticResultFormats
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@8608 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/Collaboration/skins/Comment/collaboration-comment.css
+++ b/extensions/Collaboration/skins/Comment/collaboration-comment.css
@@ -117,12 +117,22 @@ div.collabComResRatingIcon img {
 div.collabComResText {
 	padding-top: 5px;
 }
-div.collabComReply {
+
+div.collabComEdit {
+	display: inline;
+	cursor: pointer;
+}
+div.collabComDel {
+	display: inline;
+	cursor: pointer;
+}
+
+span.collabComReply {
 	margin-top: 5px;
 	color: #116988;
 	cursor: pointer;
 }
-div.collabComReply:hover {
+span.collabComReply:hover {
 	text-decoration:underline;
 }
 div.collabComDelSelected {
@@ -162,10 +172,11 @@ span#collabComFormHeaderText:hover {
 }
 
 form#collabComForm {
+	background-color: #F2F2F2;
 	border: 1px solid lightgrey;
 	border-bottom: 1px solid grey;
 	border-collapse: collapse;
-	width: 100%;
+	/*width: 100%;*/
 	overflow: hidden;
 }
 
@@ -202,8 +213,8 @@ div#collabComFormUser span.uservalue {
 }
 
 div#collabComFormRating {
-	padding: 5px;
-	height: 32px;
+	width: 100%;
+	padding: 5px 0px 5px 5px;
 	border: 1px solid lightgrey;
 	background-color: #f7f3f7;
 }
@@ -219,6 +230,11 @@ span#collabComFormRadiobuttons { /*float:right;*/
 }
 
 /* the textarea (comment content) */
+textarea#collabComFormTextarea {
+	white-space: nowrap;
+	width:100%;
+}
+
 div#collabComFormHelp {
 	margin: 5px 0;
 	color: grey;
@@ -272,7 +288,7 @@ div#collabComFormHelp span {
 
 /* warnings created by parser function*/
 .collabComWarning {
-	color: orange;
+	color: red;
 }
 
 .collabComFormGrey {
@@ -302,8 +318,8 @@ div#collabComFormHelp span {
 
 /* the edit form */
 div#collabComEditFormRating {
-	padding: 5px;
-	height: 32px;
+	width: 100%;
+	padding: 5px 0px 5px 5px;;
 	border: 1px solid lightgrey;
 	background-color: #f7f3f7;
 }
@@ -317,6 +333,10 @@ span#collabComEditFormRadiobuttons {
 	cursor: pointer;
 	vertical-align: text-bottom;
 }
+textarea#collabComEditFormTextarea {
+	width:100%;
+}
+
 #collabComEditFormCancel {
 	color: #116988;;
 	cursor: pointer;
